[AKRMDL-621] convert osm to geojson